--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec tsx src/index.ts",
-    "db:drop": "sequelize-cli db:drop",
-    "db:create": "sequelize-cli db:create",
-    "db:migrate": "sequelize-cli db:migrate",
-    "db:seed": "sequelize-cli db:seed:all",
-    "db:reset": "sequelize-cli db:migrate:undo:all && sequelize-cli db:migrate"
+    "dev": "cross-env NODE_ENV=development nodemon --exec tsx src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,20 +11,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "morgan": "^1.10.0",
     "pg": "^8.14.1",
-    "pg-hstore": "^2.3.4",
-    "qrcode": "^1.5.4",
-    "sequelize": "^6.37.7",
-    "sequelize-cli": "^6.6.2"
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
+    "@types/pg": "^8.11.13",
     "@types/qrcode": "^1.5.5",
+    "cross-env": "^7.0.3",
     "eslint": "^9.25.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.5.3",
