--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -18,6 +19,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
+    "prisma": "^6.6.0",
     "qrcode": "^1.5.4"
   },
   "devDependencies": {
