--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,14 +4,17 @@
   "type": "module",
   "scripts": {
     "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "react-router dev --host",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@react-router/fs-routes": "^7.5.1",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
+    "axios": "^1.8.4",
     "isbot": "^5.1.17",
+    "qr-scanner": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1"
