--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   }
 }
