--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.1"
   },
   "devDependencies": {
