--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,24 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-router/fs-routes": "^7.5.1",
     "@react-router/node": "^7.5.1",
     "@react-router/serve": "^7.5.1",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.503.0",
+    "next-themes": "^0.4.6",
     "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
-    "react-router": "^7.5.1"
+    "react-router": "^7.5.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.1",
@@ -28,6 +36,7 @@
     "@types/react-dom": "^18.3.0",
     "react-router-devtools": "^1.1.0",
     "tailwindcss": "^4.0.0",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.7.2",
     "vite": "^5.4.11",
     "vite-tsconfig-paths": "^5.1.4"
