--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@react-router/fs-routes": "^7.5.1",
     "@react-router/node": "^7.5.1",
@@ -23,12 +24,14 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "isbot": "^5.1.17",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.4.6",
     "qr-scanner": "^1.4.2",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
