--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nanoid": "^5.1.5",
     "pg": "^8.14.1",
     "prisma": "^6.6.0",
     "qrcode": "^1.5.4"
