--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,17 @@
-# Step 1: Build the app
-FROM node:22 AS builder
-WORKDIR /app
+FROM node:24-alpine
 
-# Copy dependencies first (better caching)
-COPY package*.json tsconfig.json ./
+WORKDIR /usr/src/app
+
+COPY . .
+
 RUN npm install
 
-# Copy the rest of the code and build it
-COPY ./src ./src
+# Generate Prisma client
+RUN npm run db:generate
+
+# Build the TypeScript code
 RUN npm run build
 
-# Step 2: Run the app
-FROM node:22-slim
-WORKDIR /app
-COPY --from=builder /app/dist ./dist
-COPY package*.json ./
-RUN npm install --omit=dev
+EXPOSE 5000
 
 CMD ["node", "dist/index.js"]
