chore: update registry name

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Build the hello-docker Docker image
         run: |
           cd backend
-          docker build . --tag ghcr.io/aemzayn/absenin:latest
-          docker push ghcr.io/aemzayn/absenin:latest
+          docker build . --tag ghcr.io/aemzayn/absenin-backend:latest
+          docker push ghcr.io/aemzayn/absenin-backend:latest
