fix: action to be trigger only on main branch update

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,9 @@
 name: publish
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
   publish-hello-docker-image:
     runs-on: ubuntu-latest
